ajout du fichier

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>Document</title>
     <h1> hello HELIOS 2025 </h1>
     <p>njnnjsnkjsknslkslnlkskns skjnskjsnss,mskjskjsjsjssmmam </p>
-    
+
   <br><br>
   <link rel="stylesheet" href="style.css">   </p>     
     </h1>
+    <script src="main.js"></script>
 </head>
 <body>
     
